# cpp_toys

./: .gitignore  CMakeLists.txt  LICENSE
encode/utf8/include/: u8char.h  u8exception.h  u8string.h  utf8char.h
encode/utf8/src/: main.cpp  u8char.cpp  u8string.cpp
encode/utf8/test/: test_main.cpp
include/encode/utf8/: u8char.h  u8exception.h  u8string.h
projects/utf8/: CMakeLists.txt
test/: test_main.cpp
